versions/v2.8/modules/en/pages/cluster-deployment/infra-providers/aws/node-template-configuration.adoc
= EC2 Node Template Configuration

For more details about EC2, nodes, refer to the official documentation for the https://aws.amazon.com/ec2[EC2 Management Console].

=== Region

In the *Region* field, select the same region that you used when creating your cloud credentials.

=== Cloud Credentials

Your AWS account access information, stored in a xref:../../../rancher-admin/users/settings/manage-cloud-credentials.adoc[cloud credential.]

See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey[Amazon Documentation: Creating Access Keys] how to create an Access Key and Secret Key.

See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_create.html#access_policies_create-start[Amazon Documentation: Creating IAM Policies (Console)] how to create an IAM policy.

See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_change-permissions.html#users_change_permissions-add-console[Amazon Documentation: Adding Permissions to a User (Console)] how to attach an IAM

See our three example JSON policies:

* link:aws.adoc#example-iam-policy[Example IAM Policy]
* link:aws.adoc#example-iam-policy-with-passrole[Example IAM Policy with PassRole] (needed if you want to use xref:../../set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider] or want to pass an IAM Profile to an instance)
* link:aws.adoc#example-iam-policy-to-allow-encrypted-ebs-volumes[Example IAM Policy to allow encrypted EBS volumes] policy to an user.

=== Authenticate & Configure Nodes

Choose an availability zone and network settings for your cluster.

=== Security Group

Choose the default security group or configure a security group.

Please refer to link:../../../installation-and-upgrade/requirements/port-requirements.adoc#rancher-aws-ec2-security-group[Amazon EC2 security group when using Node Driver] to see what rules are created in the `rancher-nodes` Security Group.

If you provide your own security group for an EC2 instance, please note that Rancher will not modify it. As such, you will be responsible for ensuring that your security group is set to allow the link:../../../installation-and-upgrade/requirements/port-requirements.adoc#ports-for-rancher-server-nodes-on-rke[necessary ports for Rancher to provision the instance]. For more information on controlling inbound and outbound traffic to EC2 instances with security groups, refer https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html#WorkingWithSecurityGroups[here].

=== Instance Options

Configure the instances that will be created. Make sure you configure the correct *SSH User* for the configured AMI. It is possible that a selected region does not support the default instance type. In this scenario you must select an instance type that does exist, otherwise an error will occur stating the requested configuration is not supported.

If you need to pass an *IAM Instance Profile Name* (not ARN), for example, when you want to use a xref:../../set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider], you will need an additional permission in your policy. See link:aws.adoc#example-iam-policy-with-passrole[Example IAM policy with PassRole] for an example policy.

=== Engine Options

In the *Engine Options* section of the node template, you can configure the container daemon. You may want to specify the container version or a container image registry mirror.
